# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-doc-builder"
version = "0.4"
description = "Creating Atlassian Document in a programmatic way."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "khwong-c", email = "kin.hin.wong.c@gmail.com" }]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
keywords = []

dependencies = [
    "jsonschema"
]

[project.urls]
Repository = "https://github.com/khwong-c/atlassian-doc-builder"
